fix: checkbox was not showing error messages

--- a/src/constants/overrides.css
+++ b/src/constants/overrides.css
@@ -1,3 +1,7 @@
 .ant-form-item {
   margin-bottom: 8px !important;
 }
+
+.ant-checkbox-wrapper {
+  line-height: 22px;
+}
